feat: add dependency vulnerability check (pip-audit)

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -35,6 +35,9 @@ jobs:
           echo "Checking static analysis..."
           flake8 .
 
+      - name: Security Check
+        run: pip-audit
+
       - name: Run Tests
         run: |
           pytest -v
